fixed heading spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,6 +63,6 @@ ol li {
   list-style: none;
 }
 
-a{
+p a{
   color:#08a4e3;
 }
